--- a/package.json
+++ b/package.json
@@ -15,8 +15,10 @@
     "@types/react-dom": "18.2.4",
     "autoprefixer": "10.4.14",
     "classnames": "^2.3.2",
+    "date-fns": "^2.30.0",
     "eslint": "8.41.0",
     "eslint-config-next": "13.4.3",
+    "ical2json": "^3.1.2",
     "next": "13.4.3",
     "postcss": "8.4.23",
     "react": "18.2.0",
