fixed offset and added grid

--- a/src/course-config.json
+++ b/src/course-config.json
@@ -2,6 +2,7 @@
     "SUMMARY_MAP": {
         "3A-SH1": "Découverte de l'entreprise",
         "3A-SH2": "Management de projet",
+        "3A-SH3E": "Improvisation",
         "3A-SH3C": "Team building",
         "3I-IN10": "Base de données",
         "3I-IN1": "Architecture",
