style(nav bar): :lipstick: improve the style of the nav bar

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,6 +2,7 @@
     "conventionalCommits.scopes": [
         "landing page",
         "first time",
-        "edt"
+        "edt",
+        "nav bar"
     ]
 }
