--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "icalts": "^0.0.2",
     "megajs": "^1.1.3",
     "next": "13.4.3",
+    "passport": "^0.6.0",
     "postcss": "8.4.23",
     "react": "18.2.0",
     "react-dom": "18.2.0",
@@ -30,6 +31,7 @@
     "typescript": "5.0.4"
   },
   "devDependencies": {
+    "@types/passport": "^1.0.12",
     "prisma": "^4.14.0"
   }
 }
