--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "postinstall": "prisma generate"
   },
   "dependencies": {
-    "@prisma/client": "^4.14.0",
+    "@prisma/client": "^5.3.0",
+    "@react-oauth/google": "^0.11.1",
     "@types/node": "20.2.3",
     "@types/react": "18.2.6",
     "@types/react-dom": "18.2.4",
@@ -22,6 +23,7 @@
     "icalts": "^0.0.2",
     "megajs": "^1.1.3",
     "next": "13.4.3",
+    "passport": "^0.6.0",
     "postcss": "8.4.23",
     "react": "18.2.0",
     "react-dom": "18.2.0",
@@ -29,6 +31,7 @@
     "typescript": "5.0.4"
   },
   "devDependencies": {
+    "@types/passport": "^1.0.12",
     "prisma": "^4.14.0"
   }
 }
