--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -26,7 +26,7 @@ jobs:
           file: ./Dockerfile
           push: true
           tags: ${{ secrets.DOCKER_USERNAME }}/esiee-hub:rpi
-          platforms: linux/arm/v8
+          platforms: linux/arm64/v8
 
   deploy:
     needs: build
