--- a/package.json
+++ b/package.json
@@ -19,14 +19,14 @@
     "classnames": "^2.3.2",
     "date-fns": "^2.30.0",
     "eslint": "8.41.0",
-    "eslint-config-next": "13.4.3",
+    "eslint-config-next": "^13.5.3",
     "icalts": "^0.0.2",
     "megajs": "^1.1.3",
-    "next": "13.4.3",
+    "next": "^13.5.3",
     "passport": "^0.6.0",
     "postcss": "8.4.23",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "tailwindcss": "3.3.2",
     "typescript": "5.0.4"
   },
