--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,9 +1,7 @@
 name: ci
 
 on:
-  push:
-    branches:
-      - "alpha"
+  push: {}
 
 jobs:
   build:
@@ -42,4 +40,3 @@ jobs:
             cd /home/domesday/code/alpha.esiee-hub
             docker-compose pull
             docker-compose down && docker-compose up -d
-            
