--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,7 +1,12 @@
 name: ci
 
 on:
-  push: {}
+  push:
+    branches:
+      - '*'
+  delete:
+    branches:
+      - '*'
 
 jobs:
   build:
@@ -23,13 +28,27 @@ jobs:
           context: .
           file: ./Dockerfile
           push: true
-          tags: ${{ secrets.DOCKER_USERNAME }}/alpha_esiee-hub:rpi
+          tags: ${{ secrets.DOCKER_USERNAME }}/esiee-hub:${{ github.ref_slug }}
           platforms: linux/arm64/v8
 
   deploy:
     needs: build
     runs-on: ubuntu-latest
     steps:
+      - name: Check if branch was deleted
+        run: echo "Branch deleted: ${{ github.event.ref }}"
+        if: startsWith(github.event_name, 'delete')
+        with:
+          host: ${{ secrets.PI_HOST }}
+          username: ${{ secrets.PI_USERNAME }}
+          password: ${{ secrets.PI_PASSWORD }}
+          script: |
+            ESIEE_HUB_SERVICE=${{ github.ref_slug }}
+            cd /home/share/autodeploy
+            docker-compose down
+            docker rmi -f ${{ secrets.DOCKER_USERNAME }}/esiee-hub:${{ github.ref_slug }}
+
+
       - name: SSH and Docker Pull
         uses: appleboy/ssh-action@v1.0.0
         with:
@@ -37,6 +56,8 @@ jobs:
           username: ${{ secrets.PI_USERNAME }}
           password: ${{ secrets.PI_PASSWORD }}
           script: |
-            cd /home/domesday/code/alpha.esiee-hub
+            ESIEE_HUB_SERVICE=${{ github.ref_slug }}
+            cd /home/share/autodeploy
             docker-compose pull
-            docker-compose down && docker-compose up -d
+            docker-compose down
+            docker-compose up -d
