--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -7,6 +7,8 @@ jobs:
   build:
     runs-on: ubuntu-20.04
     steps:
+      - name: Inject slug/short variables
+        uses: rlespinasse/github-slug-action@v4.x
       - name: Checkout
         uses: actions/checkout@v4
       - name: Login to Docker Hub
