--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -34,14 +34,13 @@ jobs:
     steps:
       - name: SSH and Docker Pull
         uses: appleboy/ssh-action@v1.0.0
-        env:
-          ESIEE_HUB_SERVICE : ${{ env.GITHUB_REF_SLUG }}
         with:
           envs : ESIEE_HUB_SERVICE
           host: ${{ secrets.PI_HOST }}
           username: ${{ secrets.PI_USERNAME }}
           password: ${{ secrets.PI_PASSWORD }}
           script: |
+            sed -i 's/^ESIEE_HUB_SERVICE=.*/ESIEE_HUB_SERVICE=${{ env.GITHUB_REF_SLUG }}/' .env
             cd /home/share/autodeploy
             docker-compose pull
             docker-compose down
