--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -4,6 +4,34 @@ on:
   push: {}
 
 jobs:
+  create_subdomain:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Inject slug/short variables
+        uses: rlespinasse/github-slug-action@v4.x
+
+      - name: Checkout code
+        uses: actions/checkout@v2
+
+      - name: Set up Python
+        uses: actions/setup-python@v2
+        with:
+          python-version: '3.x'
+
+      - name: Install dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install ovh
+
+      - name: Create subdomain
+        run: |
+          python create_subdomain.py
+        env:
+          OVH_APP_KEY: ${{ secrets.OVH_APP_KEY }}
+          OVH_APP_SECRET: ${{ secrets.OVH_APP_SECRET }}
+          OVH_CONSUMER_KEY: ${{ secrets.OVH_CONSUMER_KEY }}
+          OVH_DOMAIN: ${{ secrets.OVH_DOMAIN }}
+          OVH_SUBDOMAIN: ${{ env.GITHUB_REF_SLUG }}.esiee-hub
   build:
     runs-on: ubuntu-20.04
     steps:
