--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -4,7 +4,7 @@ on:
   push: {}
 
 jobs:
-  create_subdomain:
+  subdomain:
     runs-on: ubuntu-latest
     steps:
       - name: Inject slug/short variables
@@ -33,28 +33,29 @@ jobs:
           OVH_DOMAIN: ${{ secrets.OVH_DOMAIN }}
           OVH_SUBDOMAIN: ${{ env.GITHUB_REF_SLUG }}.esiee-hub
   build:
+    needs: subdomain
     runs-on: ubuntu-20.04
     steps:
       - name: Inject slug/short variables
         uses: rlespinasse/github-slug-action@v4.x
-      - name: Checkout
-        uses: actions/checkout@v4
-      - name: Login to Docker Hub
-        uses: docker/login-action@v3
-        with:
-          username: ${{ secrets.DOCKER_USERNAME }}
-          password: ${{ secrets.DOCKER_TOKEN }}
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v3 
+      # - name: Checkout
+      #   uses: actions/checkout@v4
+      # - name: Login to Docker Hub
+      #   uses: docker/login-action@v3
+      #   with:
+      #     username: ${{ secrets.DOCKER_USERNAME }}
+      #     password: ${{ secrets.DOCKER_TOKEN }}
+      # - name: Set up Docker Buildx
+      #   uses: docker/setup-buildx-action@v3 
        
-      - name: Build and push
-        uses: docker/build-push-action@v5
-        with:
-          context: .
-          file: ./Dockerfile
-          push: true
-          tags: ${{ secrets.DOCKER_USERNAME }}/esiee-hub:${{ env.GITHUB_REF_SLUG }}
-          platforms: linux/arm64/v8
+      # - name: Build and push
+      #   uses: docker/build-push-action@v5
+      #   with:
+      #     context: .
+      #     file: ./Dockerfile
+      #     push: true
+      #     tags: ${{ secrets.DOCKER_USERNAME }}/esiee-hub:${{ env.GITHUB_REF_SLUG }}
+      #     platforms: linux/arm64/v8
   
   deploy:
     needs: build
