--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "date-fns": "^2.30.0",
     "eslint": "8.41.0",
     "eslint-config-next": "^13.5.3",
+    "fastest-levenshtein": "^1.0.16",
     "icalts": "^0.0.2",
     "megajs": "^1.1.3",
     "next": "^13.5.3",
