--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -11,28 +11,25 @@ jobs:
         uses: rlespinasse/github-slug-action@v4.x
 
       - name: Checkout code
-        uses: actions/checkout@v2
+        uses: actions/checkout@v3
 
       - name: Set up Python
-        uses: actions/setup-python@v2
+        uses: actions/setup-python@v4
         with: 
           python-version: '3.x'
 
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install ovh
+          pip install cloudflare
  
       - name: Create subdomain
         run: |
           python pipeline/create_subdomain.py
         env:
-          OVH_ENDPOINT: ${{ secrets.DNS_OVH_ENDPOINT }}
-          OVH_APP_KEY: ${{ secrets.DNS_OVH_APPLICATION_KEY }}
-          OVH_APP_SECRET: ${{ secrets.DNS_OVH_APPLICATION_SECRET }}
-          OVH_CONSUMER_KEY: ${{ secrets.DNS_OVH_CONSUMER_KEY }}
-          OVH_DOMAIN: domesday.fr
-          OVH_SUBDOMAIN: ${{ env.GITHUB_REF_SLUG }}.esiee-hub
+          DNS_TOKEN: ${{ secrets.DNS_TOKEN }}
+          DNS_DOMAIN: domesday.fr
+          DNS_SUBDOMAIN: ${{ env.GITHUB_REF_SLUG }}.esiee-hub
   build:
     needs: subdomain
     runs-on: ubuntu-20.04
