--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -54,7 +54,10 @@ jobs:
           push: true
           tags: ${{ secrets.DOCKER_USERNAME }}/esiee-hub:${{ env.GITHUB_REF_SLUG }}
           platforms: linux/arm64/v8
-
+        env:
+          SUPABASE_URL: ${{ secrets.DB_URL }}
+          
+   
   deploy:
     needs: build
     runs-on: ubuntu-latest
