--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -54,8 +54,8 @@ jobs:
           push: true
           tags: ${{ secrets.DOCKER_USERNAME }}/esiee-hub:${{ env.GITHUB_REF_SLUG }}
           platforms: linux/arm64/v8
-          build-args: 
-            - SUPABASE_URL=${{ secrets.DB_URL }}
+          build-args: |
+            SUPABASE_URL=${{ secrets.DB_URL }}
           
    
   deploy:
