--- a/package.json
+++ b/package.json
@@ -22,10 +22,9 @@
     "eslint-config-next": "^13.5.3",
     "fastest-levenshtein": "^1.0.16",
     "icalts": "^0.0.2",
-    "megajs": "^1.1.3",
     "next": "^13.5.3",
     "passport": "^0.6.0",
-    "postcss": "8.4.23",
+    "postcss": "^8.4.31",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "tailwindcss": "3.3.2",
