--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -58,6 +58,7 @@ jobs:
             SUPABASE_URL=${{ secrets.DB_URL }}
             NEXT_PUBLIC_GOOGLE_CLIENT_ID=${{ secrets.GOOGLE_CLIENT_ID }}
             GOOGLE_CLIENT_SECRET=${{ secrets.GOOGLE_CLIENT_SECRET }}
+            APP_URL=${{ env.GITHUB_REF_SLUG }}.esiee-hub.domesday.fr
           
   deploy:
     needs: build
