--- a/.github/workflows/delete.yml
+++ b/.github/workflows/delete.yml
@@ -18,4 +18,4 @@ jobs:
           password: ${{ secrets.PI_PASSWORD }}
           script: |
             cd /home/share/hub/scripts
-            ./remove-container.sh ${{ env.GITHUB_REF_SLUG }}
+            sudo ./remove-container.sh ${{ env.GITHUB_REF_SLUG }}
