--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -54,6 +54,6 @@ jobs:
             DISCORD_WEBHOOK: ${{ secrets.DISCORD_WEBHOOK_URL }}
         uses: Ilshidur/action-discord@master
         with:
-          args: '[${{ github.repository }}] Branch ${{ env.GITHUB_REF_SLUG }} has been deployed.(https://${{ env.GITHUB_REF_SLUG }}'
+          args: '[${{ github.repository }}] Branch ${{ env.GITHUB_REF_SLUG }} has been deployed.(https://${{ env.GITHUB_REF_SLUG }}.esiee-hub.domesday.fr)'
           
           # étape pour ajouter le reverse proxy
