--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -19,19 +19,19 @@ jobs:
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3 
        
-      - name: Build and push
-        uses: docker/build-push-action@v5
-        with:
-          context: .
-          file: ./Dockerfile
-          push: true
-          tags: ${{ secrets.DOCKER_USERNAME }}/esiee-hub:${{ env.GITHUB_REF_SLUG }}
-          platforms: linux/arm64/v8
-          build-args: |
-            SUPABASE_URL=${{ secrets.DB_URL }}
-            NEXT_PUBLIC_GOOGLE_CLIENT_ID=${{ secrets.GOOGLE_CLIENT_ID }}
-            GOOGLE_CLIENT_SECRET=${{ secrets.GOOGLE_CLIENT_SECRET }}
-            APP_URL=${{ env.GITHUB_REF_SLUG }}.esiee-hub.domesday.fr
+      # - name: Build and push
+      #   uses: docker/build-push-action@v5
+      #   with:
+      #     context: .
+      #     file: ./Dockerfile
+      #     push: true
+      #     tags: ${{ secrets.DOCKER_USERNAME }}/esiee-hub:${{ env.GITHUB_REF_SLUG }}
+      #     platforms: linux/arm64/v8
+      #     build-args: |
+      #       SUPABASE_URL=${{ secrets.DB_URL }}
+      #       NEXT_PUBLIC_GOOGLE_CLIENT_ID=${{ secrets.GOOGLE_CLIENT_ID }}
+      #       GOOGLE_CLIENT_SECRET=${{ secrets.GOOGLE_CLIENT_SECRET }}
+      #       APP_URL=${{ env.GITHUB_REF_SLUG }}.esiee-hub.domesday.fr
           
   deploy:
     needs: build
@@ -51,9 +51,9 @@ jobs:
             sudo ./add-container.sh ${{ env.GITHUB_REF_SLUG }}
       - name: Discord notification
         env:
-            DISCORD_WEBHOOK: ${{ secrets.DISCORD_WEBHOOK_URL }}
+          DISCORD_WEBHOOK: ${{ secrets.DISCORD_WEBHOOK_URL }}
+          DISCORD_EMBEDS: '[{"title": "Deployment", "description": "[${{ github.repository }}] Branch ${{ env.GITHUB_REF_SLUG }} has been deployed.", "url": "https://${{ env.GITHUB_REF_SLUG }}.esiee-hub.domesday.fr", "color": 000000}]'
         uses: Ilshidur/action-discord@master
         with:
-          args: '[${{ github.repository }}] Branch ${{ env.GITHUB_REF_SLUG }} has been deployed.(https://${{ env.GITHUB_REF_SLUG }}.esiee-hub.domesday.fr)'
-          
+          args: '${{ env.DISCORD_EMBEDS }}'
           # étape pour ajouter le reverse proxy
