--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -52,7 +52,7 @@ jobs:
       - name: Discord notification
         env:
           DISCORD_WEBHOOK: ${{ secrets.DISCORD_WEBHOOK_URL }}
-          DISCORD_EMBEDS: '[{"title": "Deployment", "description": "[${{ github.repository }}] Branch ${{ env.GITHUB_REF_SLUG }} has been deployed.", "url": "https://${{ env.GITHUB_REF_SLUG }}.esiee-hub.domesday.fr", "color": 000000}]'
+          DISCORD_EMBEDS: '[{"title": "Deployment", "description": "[${{ github.repository }}] Branch ${{ env.GITHUB_REF_SLUG }} has been deployed.", "url": "https://${{ env.GITHUB_REF_SLUG }}.esiee-hub.domesday.fr", "color": 16711680}]'
         uses: Ilshidur/action-discord@master
         with:
           args: '${{ env.DISCORD_EMBEDS }}'
