--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -52,8 +52,8 @@ jobs:
       - name: Discord notification
         env:
           DISCORD_WEBHOOK: ${{ secrets.DISCORD_WEBHOOK_URL }}
-          DISCORD_EMBEDS: '[{"title": "Deployment", "description": "[${{ github.repository }}] Branch ${{ env.GITHUB_REF_SLUG }} has been deployed.", "url": "https://${{ env.GITHUB_REF_SLUG }}.esiee-hub.domesday.fr", "color": 16711680}]'
+          DISCORD_EMBEDS: '[{"title": "Deployment of ${{ env.GITHUB_REF_SLUG }} Link", "description": "[${{ github.repository }}] Branch ${{ env.GITHUB_REF_SLUG }} has been deployed.", "url": "https://${{ env.GITHUB_REF_SLUG }}.esiee-hub.domesday.fr", "color": 16711680}]'
         uses: Ilshidur/action-discord@master
         with:
-          args: '${{ env.DISCORD_EMBEDS }}'
+          args: ''
           # étape pour ajouter le reverse proxy
