--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -19,19 +19,19 @@ jobs:
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3 
        
-      # - name: Build and push
-      #   uses: docker/build-push-action@v5
-      #   with:
-      #     context: .
-      #     file: ./Dockerfile
-      #     push: true
-      #     tags: ${{ secrets.DOCKER_USERNAME }}/esiee-hub:${{ env.GITHUB_REF_SLUG }}
-      #     platforms: linux/arm64/v8
-      #     build-args: |
-      #       SUPABASE_URL=${{ secrets.DB_URL }}
-      #       NEXT_PUBLIC_GOOGLE_CLIENT_ID=${{ secrets.GOOGLE_CLIENT_ID }}
-      #       GOOGLE_CLIENT_SECRET=${{ secrets.GOOGLE_CLIENT_SECRET }}
-      #       APP_URL=${{ env.GITHUB_REF_SLUG }}.esiee-hub.domesday.fr
+      - name: Build and push
+        uses: docker/build-push-action@v5
+        with:
+          context: .
+          file: ./Dockerfile
+          push: true
+          tags: ${{ secrets.DOCKER_USERNAME }}/esiee-hub:${{ env.GITHUB_REF_SLUG }}
+          platforms: linux/arm64/v8
+          build-args: |
+            SUPABASE_URL=${{ secrets.DB_URL }}
+            NEXT_PUBLIC_GOOGLE_CLIENT_ID=${{ secrets.GOOGLE_CLIENT_ID }}
+            GOOGLE_CLIENT_SECRET=${{ secrets.GOOGLE_CLIENT_SECRET }}
+            APP_URL=${{ env.GITHUB_REF_SLUG }}.esiee-hub.domesday.fr
           
   deploy:
     needs: build
@@ -52,7 +52,7 @@ jobs:
       - name: Discord notification
         env:
           DISCORD_WEBHOOK: ${{ secrets.DISCORD_WEBHOOK_URL }}
-          DISCORD_EMBEDS: '[{"title": "Deployment of ${{ env.GITHUB_REF_SLUG }} Link", "description": "[${{ github.repository }}] Branch ${{ env.GITHUB_REF_SLUG }} has been deployed.", "url": "https://${{ env.GITHUB_REF_SLUG }}.esiee-hub.domesday.fr", "color": 16711680}]'
+          DISCORD_EMBEDS: '[{"title": "Deployment - Link of ${{ env.GITHUB_REF_SLUG }}", "description": "[${{ github.repository }}] Branch ${{ env.GITHUB_REF_SLUG }} has been deployed.", "url": "https://${{ env.GITHUB_REF_SLUG }}.esiee-hub.domesday.fr", "color": 14847590}]'
         uses: Ilshidur/action-discord@master
         with:
           args: ''
