--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -11,7 +11,7 @@ jobs:
         uses: rlespinasse/github-slug-action@v4.x
       - name: Checkout
         uses: actions/checkout@v4
-      - name: Login to Docker Hub
+      - name: Page to Docker Hub
         uses: docker/login-action@v3
         with:
           username: ${{ secrets.DOCKER_USERNAME }}
