--- a/package.json
+++ b/package.json
@@ -11,7 +11,6 @@
   },
   "dependencies": {
     "@prisma/client": "^5.3.1",
-    "@react-oauth/google": "^0.11.1",
     "@types/node": "20.2.3",
     "@types/react": "18.2.6",
     "@types/react-dom": "18.2.4",
@@ -23,7 +22,7 @@
     "fastest-levenshtein": "^1.0.16",
     "icalts": "^0.0.2",
     "next": "^13.5.3",
-    "passport": "^0.6.0",
+    "next-auth": "^4.23.2",
     "postcss": "^8.4.31",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
