--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -11,6 +11,7 @@ jobs:
         uses: rlespinasse/github-slug-action@v4.x
 
       - name: Create Deployment
+        id: deployment
         uses: avakar/create-deployment@v1
         with:
           auto_merge: false
