--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   "dependencies": {
     "@prisma/client": "^5.3.1",
     "@types/node": "20.2.3",
-    "@types/react": "18.2.6",
+    "@types/react": "^18.2.28",
     "@types/react-dom": "18.2.4",
     "autoprefixer": "10.4.14",
     "classnames": "^2.3.2",
@@ -27,7 +27,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "tailwindcss": "3.3.2",
-    "typescript": "5.0.4"
+    "typescript": "^5.2.2"
   },
   "devDependencies": {
     "@types/passport": "^1.0.12",
