--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -8,7 +8,7 @@ jobs:
     runs-on: ubuntu-20.04
     steps:
       - name: Inject slug/short variables
-        uses: rlespinasse/github-slug-action@v4.x          
+        uses: rlespinasse/github-slug-action@v4.x
       - name: Checkout
         uses: actions/checkout@v4
       - name: Login to Docker Hub
@@ -17,8 +17,8 @@ jobs:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_TOKEN }}
       - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v3 
-      
+        uses: docker/setup-buildx-action@v3
+
       - name: Build and push
         uses: docker/build-push-action@v5
         with:
@@ -29,7 +29,7 @@ jobs:
           platforms: linux/arm64/v8
           build-args: |
             SUPABASE_URL=${{ secrets.DB_URL }}
-          
+
   deploy:
     needs: build
     runs-on: ubuntu-latest
@@ -40,7 +40,7 @@ jobs:
         uses: appleboy/ssh-action@v1.0.0
         with:
           host: ${{ secrets.PI_HOST }}
-          username: ${{ secrets.PI_USERNAME }} 
+          username: ${{ secrets.PI_USERNAME }}
           password: ${{ secrets.PI_PASSWORD }}
           script: |
             cd /home/share/hub/scripts
@@ -51,5 +51,5 @@ jobs:
           DISCORD_EMBEDS: '[{"title": "Deployment - Link of ${{ env.GITHUB_REF_SLUG }}", "description": "[${{ github.repository }}] Branch ${{ env.GITHUB_REF_SLUG }} has been deployed.", "url": "https://${{ env.GITHUB_REF_SLUG }}.heurly.fr", "color": 14847590}]'
         uses: Ilshidur/action-discord@master
         with:
-          args: ''
+          args: ""
           # étape pour ajouter le reverse proxy
