--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
   },
   "husky": {
     "hooks": {
-      "pre-commit": "npm run format"
+      "pre-commit": "npm run format && git add ."
     }
   },
   "dependencies": {
@@ -40,7 +40,8 @@
   "devDependencies": {
     "@types/passport": "^1.0.12",
     "husky": "^8.0.3",
-    "prettier": "3.0.3",
+    "prettier": "^3.0.3",
+    "pretty-quick": "^3.1.3",
     "prisma": "^4.14.0"
   }
 }
