Deploy only in main/alpha and PR

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,7 +1,12 @@
 name: ci-push
 
 on:
-  push: {}
+  push:
+    branches:
+      - alpha
+      - main
+  pull_request:
+    types: [opened, synchronize]
 
 jobs:
   build:
