--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "esiee-hub",
+  "name": "heurly",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -31,6 +31,7 @@
     "icalts": "^0.0.2",
     "next": "^13.5.3",
     "next-auth": "^4.23.2",
+    "next-pwa": "^5.6.0",
     "postcss": "^8.4.31",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
