--- a/package.json
+++ b/package.json
@@ -10,7 +10,12 @@
     "postinstall": "prisma generate",
     "prepare": "husky install",
     "prettier": "prettier --check .",
-    "format": "prettier --write ."
+    "format": "prettier --write .",
+    "cypress:open": "cypress open",
+    "e2e": "start-server-and-test dev http://localhost:3000 \"cypress open --e2e\"",
+    "e2e:headless": "start-server-and-test dev http://localhost:3000 \"cypress run --e2e\"",
+    "component": "cypress open --component",
+    "component:headless": "cypress run --component"
   },
   "husky": {
     "hooks": {
@@ -18,28 +23,42 @@
     }
   },
   "dependencies": {
+    "@mdx-js/loader": "^3.0.0",
+    "@mdx-js/react": "^3.0.0",
+    "@next/mdx": "^14.0.3",
     "@prisma/client": "^5.5.2",
+    "@radix-ui/react-slot": "^1.0.2",
+    "@radix-ui/react-switch": "^1.0.3",
+    "@radix-ui/react-tooltip": "^1.0.7",
+    "@types/mdx": "^2.0.10",
     "@types/node": "20.2.3",
     "@types/react": "^18.2.28",
     "@types/react-dom": "18.2.4",
     "autoprefixer": "10.4.14",
+    "class-variance-authority": "^0.7.0",
     "classnames": "^2.3.2",
+    "clsx": "^2.0.0",
     "date-fns": "^2.30.0",
     "eslint": "8.41.0",
     "eslint-config-next": "^13.5.3",
     "fastest-levenshtein": "^1.0.16",
     "icalts": "^0.0.2",
-    "next": "^13.5.3",
-    "next-auth": "^4.23.2",
+    "lucide-react": "^0.292.0",
+    "next": "^14.0.3",
+    "next-auth": "^4.24.5",
     "postcss": "^8.4.31",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "start-server-and-test": "^2.0.3",
     "swiper": "^10.3.1",
+    "tailwind-merge": "^2.0.0",
     "tailwindcss": "3.3.2",
+    "tailwindcss-animate": "^1.0.7",
     "typescript": "^5.2.2"
   },
   "devDependencies": {
     "@types/passport": "^1.0.12",
+    "cypress": "^13.5.1",
     "husky": "^8.0.3",
     "prettier": "^3.0.3",
     "pretty-quick": "^3.1.3",
