--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "eslint": "8.41.0",
     "eslint-config-next": "^13.5.3",
     "fastest-levenshtein": "^1.0.16",
+    "ical.js": "^1.5.0",
     "icalts": "^0.0.2",
     "lucide-react": "^0.292.0",
     "next": "^14.0.3",
